syntax="proto3";

option java_multiple_files = true;
option java_package = "cn.atali.usercenter";
option java_outer_classname = "DictionariesProto";
option objc_class_prefix = "DICTIONARIESRV";

package usercenter;
option go_package = "./;usercenter";

import "common.proto";

service Dictionaries{
    rpc Add(DictionariesInfo)returns(CommonResponse){}
    rpc Update(DictionariesInfo)returns(CommonResponse){}
    rpc Delete(DelRequest)returns(CommonResponse){}
    rpc Query(QueryDictionariesRequest)returns(QueryDictionariesResponse){}
    rpc GetAll(GetAllRequest)returns(GetAllDictionariesResponse){}
    rpc GetDetail(GetDetailRequest)returns(GetDictionariesDetailResponse){}
    rpc Export(CommonExportRequest)returns(CommonExportResponse){}
}

message DictionariesInfo {
    string id=1;
	//Description 
 	string description=2;
	//Name 
 	string name=3;
	//Type 
 	string type=4;
	//Value 
 	string value=5;
	//租户ID 
 	string projectID=6;
    string tenantID=7;
    //系统必须要有的数据
    bool isMust=8;
}




message QueryDictionariesRequest{
    // @inject_tag: uri:"pageIndex" form:"pageIndex"
    int64 pageIndex=1;
    // @inject_tag: uri:"pageSize" form:"pageSize"
    int64 pageSize=2;
    // @inject_tag: uri:"orderField" form:"orderField"
    string orderField=3;
    // @inject_tag: uri:"desc" form:"desc"
    bool desc=4;
	//租户ID 
    // @inject_tag: uri:"tenantID" form:"tenantID"
    string tenantID=9;
    // @inject_tag: uri:"isMust" form:"isMust"
    bool isMust=10;
    // @inject_tag: uri:"sortConfig" form:"sortConfig"
    string sortConfig=11;
}

message QueryDictionariesResponse{
    Code code=1;
    string message=2;
    repeated DictionariesInfo data=3;
    int64 pages=4;
    int64 records=5;
    int64 total=6;
}

message GetAllDictionariesResponse{
    Code code=1;
    string message=2;
    repeated DictionariesInfo data=3;
}

message GetDictionariesDetailResponse{
    Code code=1;
    string message=2;
    DictionariesInfo data=3;
}